# ai-testing

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
ai_test/: ai_services.py  app.py  constant.py  demo.py  measurement.py
ai_test/services/: ai_services.py  s3.py
ai_test/ui/: test_model.py  validation_rule.py  view_result.py
ai_test/ui/static/css/: styles.css
ai_test/ui/static/js/: slider.js
ai_test/utils/: extract_zip.py  helpers.py  measurement.py
